webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    name: webapp
spec:
  rules:
  - host: gantavenkat.rancher.localhost
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
  tls:
    - hosts:
      - gantavenkat.rancher.localhost
